--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConnection": "server=bhij5008vy2m65o58boh-mysql.services.clever-cloud.com;port=5432;database=bhij5008vy2m65o58boh;uid=uzvj8zmadnfkludt;password=wDtk65pFJbg24IVCXntn"
+  }
 }
